SUBDIRS = src java_bindings test
#SUBDIRS = src java_bindings python_bindings test

RELEASE	= $(PACKAGE)-$(VERSION)

#EXTRA_DIST = TESTS
EXTRA_DIST = \
	m4/ax_cxx_compile_stdcxx_11.m4
	m4/ax_jni_include_dir.m4
	m4/ax_pkg_swig.m4
	m4/ax_python_devel.m4
	m4/ax_swig_enable_cxxx.m4
	m4/ax_swig_python.m4
	m4/be_scan_cflags.m4
	m4/libtool.m4
	m4/lt~obsolete.m4
	m4/ltoptions.m4
	m4/ltsugar.m4
	m4/ltversion.m4
	bootstrap.sh

ACLOCAL_AMFLAGS = -I m4

